update to arc 3.0.0 arc-jupyter 3.0.1